<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="accountPageContentPageVM" type="com.sapplication.app.modules.accountpagecontentpage.data.viewmodel.AccountPageContentPageVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearColumnemergency"
        android:layout_height="match_parent"
        android:layout_marginEnd="@dimen/_25pxh"
        android:layout_marginStart="@dimen/_25pxh"
        android:layout_marginTop="@dimen/_22pxv"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylegray_200">
        <LinearLayout android:gravity="start"
            android:id="@+id/linearAccountPageCo"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylegray_200">
            <TextView android:ellipsize="end"
                android:id="@+id/txtEmergency"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{accountPageContentPageVM.accountPageContentPageModel.txtEmergency}"
                style="@style/txtOpenSansromanbold18" tools:text="@string/lbl_emergency"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtAmbulanceButto"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_19pxv"
                android:paddingStart="@dimen/_20pxh"
                android:paddingTop="@dimen/_20pxv"
                android:singleLine="true"
                android:text="@{accountPageContentPageVM.accountPageContentPageModel.txtAmbulanceButto}"
                style="@style/txtSolidRoundedTopCornerOutline" tools:text="@string/lbl_ambulance"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtHospitalButton"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_17pxv"
                android:paddingStart="@dimen/_20pxh"
                android:paddingTop="@dimen/_21pxv"
                android:singleLine="true"
                android:text="@{accountPageContentPageVM.accountPageContentPageModel.txtHospitalButton}"
                style="@style/txtSolidOutline" tools:text="@string/lbl_hospital"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtMedicineStore"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_19pxv"
                android:paddingStart="@dimen/_20pxh"
                android:paddingTop="@dimen/_20pxv"
                android:singleLine="true"
                android:text="@{accountPageContentPageVM.accountPageContentPageModel.txtMedicineStore}"
                style="@style/txtSolidRoundedBottomCornerOutline" tools:text="@string/lbl_medicine_store"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtAccountSetting"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_24pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{accountPageContentPageVM.accountPageContentPageModel.txtAccountSetting}"
                style="@style/txtOpenSansromanbold18" tools:text="@string/msg_account_setting"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtDataButton"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_17pxv"
                android:paddingStart="@dimen/_20pxh"
                android:paddingTop="@dimen/_21pxv"
                android:singleLine="true"
                android:text="@{accountPageContentPageVM.accountPageContentPageModel.txtDataButton}"
                style="@style/txtSolidRoundedTopCornerOutline_1" tools:text="@string/msg_login_and_secur"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtFamilyButton"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_17pxv"
                android:paddingStart="@dimen/_20pxh"
                android:paddingTop="@dimen/_21pxv"
                android:singleLine="true"
                android:text="@{accountPageContentPageVM.accountPageContentPageModel.txtFamilyButton}"
                style="@style/txtSolidOutline_1" tools:text="@string/lbl_family_connect"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtButtonThree"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_16pxv"
                android:paddingStart="@dimen/_20pxh"
                android:paddingTop="@dimen/_22pxv"
                android:singleLine="true"
                android:text="@{accountPageContentPageVM.accountPageContentPageModel.txtButtonThree}"
                style="@style/txtSolidOutline_1" tools:text="@string/lbl_manage_devices"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtButtonFour"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_17pxv"
                android:paddingStart="@dimen/_20pxh"
                android:paddingTop="@dimen/_21pxv"
                android:singleLine="true"
                android:text="@{accountPageContentPageVM.accountPageContentPageModel.txtButtonFour}"
                style="@style/txtSolidOutline_1" tools:text="@string/msg_manage_your_pro"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtButtonFive"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_19pxv"
                android:paddingStart="@dimen/_20pxh"
                android:paddingTop="@dimen/_20pxv"
                android:singleLine="true"
                android:text="@{accountPageContentPageVM.accountPageContentPageModel.txtButtonFive}"
                style="@style/txtSolidOutline_1" tools:text="@string/msg_manage_your_bad"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtButtonSix"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_19pxv"
                android:paddingStart="@dimen/_20pxh"
                android:paddingTop="@dimen/_20pxv"
                android:singleLine="true"
                android:text="@{accountPageContentPageVM.accountPageContentPageModel.txtButtonSix}"
                style="@style/txtSolidOutline_1" tools:text="@string/msg_review_your_doc"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtButtonSeven"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_19pxv"
                android:paddingStart="@dimen/_20pxh"
                android:paddingTop="@dimen/_20pxv"
                android:singleLine="true"
                android:text="@{accountPageContentPageVM.accountPageContentPageModel.txtButtonSeven}"
                style="@style/txtSolidRoundedBottomCornerOutline_1" tools:text="@string/lbl_photo_id_proofs"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtDataandPrivac"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_23pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{accountPageContentPageVM.accountPageContentPageModel.txtDataandPrivac}"
                style="@style/txtOpenSansromanbold18" tools:text="@string/msg_data_and_privac"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtButtonOne"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_19pxv"
                android:paddingStart="@dimen/_20pxh"
                android:paddingTop="@dimen/_20pxv"
                android:singleLine="true"
                android:text="@{accountPageContentPageVM.accountPageContentPageModel.txtButtonOne}"
                style="@style/txtSolidRoundedTopCornerOutline_1" tools:text="@string/msg_delete_your_inf"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtButtonEight"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_19pxv"
                android:paddingStart="@dimen/_20pxh"
                android:paddingTop="@dimen/_20pxv"
                android:singleLine="true"
                android:text="@{accountPageContentPageVM.accountPageContentPageModel.txtButtonEight}"
                style="@style/txtSolidOutline_1" tools:text="@string/msg_edit_your_infor"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtButtonNine"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_19pxv"
                android:paddingStart="@dimen/_20pxh"
                android:paddingTop="@dimen/_20pxv"
                android:singleLine="true"
                android:text="@{accountPageContentPageVM.accountPageContentPageModel.txtButtonNine}"
                style="@style/txtSolidOutline_1" tools:text="@string/msg_close_your_dr"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtButtonTen"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_19pxv"
                android:paddingStart="@dimen/_20pxh"
                android:paddingTop="@dimen/_20pxv"
                android:singleLine="true"
                android:text="@{accountPageContentPageVM.accountPageContentPageModel.txtButtonTen}"
                style="@style/txtSolidRoundedBottomCornerOutline_1" tools:text="@string/lbl_privacy_notice"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtLogInOptions"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_23pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{accountPageContentPageVM.accountPageContentPageModel.txtLogInOptions}"
                style="@style/txtOpenSansromanbold18" tools:text="@string/lbl_log_in_options"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtButtonEleven"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_19pxv"
                android:paddingStart="@dimen/_20pxh"
                android:paddingTop="@dimen/_20pxv"
                android:singleLine="true"
                android:text="@{accountPageContentPageVM.accountPageContentPageModel.txtButtonEleven}"
                style="@style/txtSolidRoundedTopCornerOutline_1" tools:text="@string/lbl_switch_user"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtButtonTwelve"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_19pxv"
                android:paddingStart="@dimen/_20pxh"
                android:paddingTop="@dimen/_20pxv"
                android:singleLine="true"
                android:text="@{accountPageContentPageVM.accountPageContentPageModel.txtButtonTwelve}"
                style="@style/txtSolidRoundedBottomCornerOutline_1" tools:text="@string/msg_log_out_of_exis"/>
        </LinearLayout>
    </LinearLayout>
</layout>
