<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="registerPageVM" type="com.sapplication.app.modules.registerpage.data.viewmodel.RegisterPageVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearColumntopleft"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylegray_200">
        <LinearLayout android:id="@+id/linearRegisterPage"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylegray_200">
            <ImageView android:id="@+id/imageTopLeft"
                android:layout_gravity="end"
                android:layout_height="@dimen/_155pxh"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_width="@dimen/_170pxh"
                android:scaleType="fitXY"
                imageRes="@{@drawable/img_topleft_cyan_402}"
                tools:ignore="ContentDescription" tools:src="@drawable/img_topleft_cyan_402"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtWelcomeOnboard"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_27pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{registerPageVM.registerPageModel.txtWelcomeOnboard}"
                style="@style/txtOpenSansromanbold18" tools:text="@string/msg_welcome_onboard"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtTellusabouty"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_19pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{registerPageVM.registerPageModel.txtTellusabouty}"
                style="@style/txtOpenSansromanregular16" tools:text="@string/msg_tell_us_about_y"/>
            <EditText
                android:background="@drawable/rectangle_bg_white_a700_radius_5"
                android:ellipsize="end"
                android:hint="@string/msg_enter_your_full"
                android:id="@+id/etTextFieldOne"
                android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_48pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_11pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_10pxv"
                android:singleLine="true"
                android:text="@={registerPageVM.registerPageModel.etTextFieldOneValue}"
                android:textColorHint="@color/black_900_bf"
                style="@style/etSolidRounded" tools:ignore="Autofill"/>
            <EditText
                android:background="@drawable/rectangle_bg_white_a700_radius_5"
                android:ellipsize="end"
                android:hint="@string/msg_enter_your_emai"
                android:id="@+id/etTextFieldTwo"
                android:inputType="textEmailAddress"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_30pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_11pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_10pxv"
                android:singleLine="true"
                android:text="@={registerPageVM.registerPageModel.etTextFieldTwoValue}"
                android:textColorHint="@color/black_900_bf"
                style="@style/etSolidRounded" tools:ignore="Autofill"/>
            <EditText
                android:background="@drawable/rectangle_bg_white_a700_radius_5"
                android:ellipsize="end"
                android:hint="@string/lbl_enter_password"
                android:id="@+id/etTextFieldThree"
                android:inputType="textPassword"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_30pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_9pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_12pxv"
                android:singleLine="true"
                android:text="@={registerPageVM.registerPageModel.etTextFieldThreeValue}"
                android:textColorHint="@color/black_900_bf"
                style="@style/etSolidRounded" tools:ignore="Autofill"/>
            <EditText
                android:background="@drawable/rectangle_bg_white_a700_radius_5"
                android:ellipsize="end"
                android:hint="@string/msg_confirm_passwor"
                android:id="@+id/etTextFieldFour"
                android:inputType="textPassword"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_30pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_9pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_12pxv"
                android:singleLine="true"
                android:text="@={registerPageVM.registerPageModel.etTextFieldFourValue}"
                android:textColorHint="@color/black_900_bf"
                style="@style/etSolidRounded" tools:ignore="Autofill"/>
            <FrameLayout android:id="@+id/frameStackbottomright"
                android:layout_gravity="start"
                android:layout_height="@dimen/_285pxv"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_27pxv" android:layout_width="@dimen/_335pxh">
                <ImageView android:id="@+id/imageBottomRight"
                    android:layout_gravity="start"
                    android:layout_height="@dimen/_285pxh"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_width="@dimen/_190pxh"
                    android:scaleType="fitXY"
                    imageRes="@{@drawable/img_topleft_cyan_402}"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_topleft_cyan_402"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:ellipsize="end" android:gravity="center"
                    android:id="@+id/btnRegister"
                    android:layout_gravity="top|end"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_58pxv"
                    android:layout_marginStart="@dimen/_10pxh"
                    android:layout_marginTop="@dimen/_58pxv"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_18pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_30pxh"
                    android:paddingTop="@dimen/_18pxv"
                    android:singleLine="true"
                    android:text="@string/lbl_register"
                    android:textAllCaps="false"
                    style="@style/btnSolidRounded_1" tools:text="@string/lbl_register"/>
                <TextView android:ellipsize="end"
                    android:gravity="top|start"
                    android:id="@+id/txtConfirmation"
                    android:layout_gravity="bottom|start"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_118pxv"
                    android:layout_marginEnd="@dimen/_25pxh"
                    android:layout_marginStart="@dimen/_25pxh"
                    android:layout_marginTop="@dimen/_118pxv"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@{registerPageVM.registerPageModel.txtConfirmation}"
                    style="@style/txtOpenSansromanregular16" tools:text="@string/msg_already_have_an"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtSignin"
                    android:layout_gravity="bottom|end"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_118pxv"
                    android:layout_marginEnd="@dimen/_62pxh"
                    android:layout_marginStart="@dimen/_62pxh"
                    android:layout_marginTop="@dimen/_118pxv"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@{registerPageVM.registerPageModel.txtSignin}"
                    style="@style/txtOpenSansromanbold16" tools:text="@string/lbl_sign_in"/>
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>
</layout>
